sets the JavaFX env